force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Insured_Loss_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Insured_Loss_USD_Equiv__c</fullName>
    <formula>Buyer__r.Insured_Loss_USD_Equiv__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Insured Loss USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>