force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Internal_Payment_History_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Payment_History_Comments__c</fullName>
    <label>Internal Payment History Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>