force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Internal_Process_Independence_Risk__c.field-meta.xml
<CustomField>
    <fullName>Internal_Process_Independence_Risk__c</fullName>
    <label>Internal Process Independence Risk</label>
    <type>TextArea</type>
</CustomField>