force-app/main/default/objects/Supplier_Buyer_Map__c/fields/internal_relationship_details__c.field-meta.xml
<CustomField>
    <fullName>internal_relationship_details__c</fullName>
    <label>internal relationship details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>