force-app/main/default/objects/Supplier_Buyer_Map__c/fields/International_Domestic__c.field-meta.xml
<CustomField>
    <fullName>International_Domestic__c</fullName>
    <formula>if ( isblank(accepted_incoterms__c) , &apos;UNKNOWN&apos;,
if( includes( accepted_incoterms__c ,&apos;*Domestic*&apos;),&apos;Domestic&apos;,&apos;International&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>International Domestic</label>
    <type>Text</type>
</CustomField>