force-app/main/default/objects/Supplier_Buyer_Map__c/fields/invoice_amount_in_progress_prelisting__c.field-meta.xml
<CustomField>
    <fullName>invoice_amount_in_progress_prelisting__c</fullName>
    <formula>PreListing_Advance_Invoice_Amount_USD__c + total_invoice_value_in_progress__c</formula>
    <label>Invoice amount in progress prelisting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>