force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Invoice_Amount_Prelisting__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_Prelisting__c</fullName>
    <formula>(Funded_amount_in_progress_prelisting__c / If( Not(IsBlank(Percentage_of_financin_Manualg__c)), Percentage_of_financin_Manualg__c, Min( percentage_of_financing__c, Max_advance_amount_percentage__c))) - total_invoice_value_in_progress__c</formula>
    <label>Invoice Amount Prelisting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>