force-app/main/default/objects/Supplier_Buyer_Map__c/fields/invoice_deal_closed_amount__c.field-meta.xml
<CustomField>
    <fullName>invoice_deal_closed_amount__c</fullName>
    <label>invoice deal closed amount</label>
    <summarizedField>invoice_finance_deal__c.invoice_amount__c</summarizedField>
    <summaryFilterItems>
        <field>invoice_finance_deal__c.Phase__c</field>
        <operation>equals</operation>
        <value>4:CLOSED</value>
    </summaryFilterItems>
    <summaryForeignKey>invoice_finance_deal__c.Supplier_Buyer_Map__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>