force-app/main/default/objects/Supplier_Buyer_Map__c/fields/invoice_validation_instructions_for_ops__c.field-meta.xml
<CustomField>
    <fullName>invoice_validation_instructions_for_ops__c</fullName>
    <label>invoice validation instructions for ops</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>