force-app/main/default/objects/Supplier_Buyer_Map__c/fields/is_offer_conditional__c.field-meta.xml
<CustomField>
    <fullName>is_offer_conditional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is offer conditional</label>
    <type>Checkbox</type>
</CustomField>