force-app/main/default/objects/Supplier_Buyer_Map__c/fields/is_prospect_buyer__c.field-meta.xml
<CustomField>
    <fullName>is_prospect_buyer__c</fullName>
    <formula>if( Buyer__r.RecordType.Name =&apos;Prospect Buyer&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is prospect buyer</label>
    <type>Checkbox</type>
</CustomField>