force-app/main/default/objects/Supplier_Buyer_Map__c/fields/is_transwap_bank_account__c.field-meta.xml
<CustomField>
    <fullName>is_transwap_bank_account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check whether the bank account belongs to Transwap or not</description>
    <label>Is Transwap Bank Account</label>
    <type>Checkbox</type>
</CustomField>