force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Issuing_Bank__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Bank__c</fullName>
    <label>Guarantor Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bangkok Bank</fullName>
            </value>
            <value>
                <fullName>DBS Bank Limited</fullName>
            </value>
            <value>
                <fullName>Induslnd Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>