force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Late_penalty_tolerance_days__c.field-meta.xml
<CustomField>
    <fullName>Late_penalty_tolerance_days__c</fullName>
    <label>Late penalty tolerance days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>