force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Listable_Product__c.field-meta.xml
<CustomField>
    <fullName>Listable_Product__c</fullName>
    <formula>Incomlend_product__r.List_on_Marketplace__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listable Product</label>
    <type>Checkbox</type>
</CustomField>