force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Map_Currency__c.field-meta.xml
<CustomField>
    <fullName>Map_Currency__c</fullName>
    <description>Currency of the Map as well as the credit limit for this map</description>
    <formula>Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Currency of the Map as well as the credit limit for this map</inlineHelpText>
    <label>Map Currency</label>
    <type>Text</type>
</CustomField>