force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Map_Extension__c.field-meta.xml
<CustomField>
    <fullName>Map_Extension__c</fullName>
    <formula>OR ( Buyer__r.Number_of_Map_Account_Buyer__c &gt;1 , Supplier__r.Number_of_Map_for_this_Account__c &gt;2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Extension</label>
    <type>Checkbox</type>
</CustomField>