force-app/main/default/objects/Supplier_Buyer_Map__c/fields/map_ID_text__c.field-meta.xml
<CustomField>
    <fullName>map_ID_text__c</fullName>
    <formula>Name</formula>
    <label>map ID text</label>
    <type>Text</type>
</CustomField>