force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Map_Onboarded__c.field-meta.xml
<CustomField>
    <fullName>Map_Onboarded__c</fullName>
    <formula>IF(TEXT(map_onboarding_stage__c)=&quot;90.Onboarded&quot;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Onboarded</label>
    <type>Checkbox</type>
</CustomField>