force-app/main/default/objects/Supplier_Buyer_Map__c/fields/map_onboarding_stage__c.field-meta.xml
<CustomField>
    <fullName>map_onboarding_stage__c</fullName>
    <label>map onboarding stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Blocked - no stats</fullName>
            </value>
            <value>
                <fullName>05.Funders feedback Positive</fullName>
            </value>
            <value>
                <fullName>10.Checking Insurance</fullName>
            </value>
            <value>
                <fullName>15.Waiting for supplier decision to proceed</fullName>
            </value>
            <value>
                <fullName>17.Op Risk Assessment</fullName>
            </value>
            <value>
                <fullName>20.Preparing detailed map</fullName>
            </value>
            <value>
                <fullName>40.Conditional Offer Sent</fullName>
            </value>
            <value>
                <fullName>50.Waiting for Buyer confirmation</fullName>
            </value>
            <value>
                <fullName>60.Offer Sent</fullName>
            </value>
            <value>
                <fullName>80.Approvals</fullName>
            </value>
            <value>
                <fullName>85.Approved but pending buyer acknowledgment</fullName>
            </value>
            <value>
                <fullName>90.Onboarded</fullName>
            </value>
            <value>
                <fullName>rejected by buyer</fullName>
            </value>
            <value>
                <fullName>rejected by supplier</fullName>
            </value>
            <value>
                <fullName>rejected by Incomlend</fullName>
            </value>
            <value>
                <fullName>Rejected by Funder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>