force-app/main/default/objects/Supplier_Buyer_Map__c/fields/map_priority_onboarding__c.field-meta.xml
<CustomField>
    <fullName>map_priority_onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>map priority onboarding</label>
    <type>Checkbox</type>
</CustomField>