force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Map_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Map_Sales_Owner__c</fullName>
    <formula>If  (CONTAINS( Market_Place_Name__c, &quot;Reverse&quot; ),  Sales_Owner_Buyer__c ,  Sales_Owner_Supplier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Sales Owner</label>
    <type>Text</type>
</CustomField>