force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Market_Place_Name__c.field-meta.xml
<CustomField>
    <fullName>Market_Place_Name__c</fullName>
    <formula>Incomlend_product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Place Name</label>
    <type>Text</type>
</CustomField>