force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Marketplace__c</fullName>
    <label>Marketplace</label>
    <referenceTo>Marketplace__c</referenceTo>
    <relationshipLabel>Supplier Buyer Maps</relationshipLabel>
    <relationshipName>Supplier_Buyer_Maps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>