force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Marketplace_Requested_amount_usd_equiv__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Requested_amount_usd_equiv__c</fullName>
    <label>Marketplace Requested amount usd equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>