force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Max_advance_amount_percentage__c.field-meta.xml
<CustomField>
    <fullName>Max_advance_amount_percentage__c</fullName>
    <defaultValue>0.9</defaultValue>
    <label>Max advance amount percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>