force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Max_Discount_accepted_without_warning__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_accepted_without_warning__c</fullName>
    <formula>Recommended_Discount_Rate__c *(1+ Max_Discount_Rate_Deviation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Discount accepted without warning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>