force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Max_Discount_Rate_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Rate_Deviation__c</fullName>
    <description>Max Discount Rate Deviation from Recommended Discount Rate</description>
    <label>Max Discount Rate Deviation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>