force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Maximum_Financing_Period__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Financing_Period__c</fullName>
    <formula>Incomlend_product__r.Maximum_Financing_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum Financing Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>