force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Membership_Fee_Indirect_Custome__c.field-meta.xml
<CustomField>
    <fullName>Membership_Fee_Indirect_Custome__c</fullName>
    <label>Membership Indirect Customer (USD/Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>