force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Minimum_Spread__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Spread__c</fullName>
    <defaultValue>0.0010</defaultValue>
    <description>Minimum Spread for Funder calculation</description>
    <inlineHelpText>Minimum Spread for Funder calculation , decided by Directeur</inlineHelpText>
    <label>Minimum Spread</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>