force-app/main/default/objects/Supplier_Buyer_Map__c/fields/months_relationship_with_buyer__c.field-meta.xml
<CustomField>
    <fullName>months_relationship_with_buyer__c</fullName>
    <formula>floor((today() -  first_supplier_to_buyer_sale__c ) / 30.416666)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>months relationship with buyer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>