force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Supplier__r.Name &amp; &quot; selling to &quot; &amp;  Buyer__r.Name &amp; &quot; (&quot; &amp;  Incomlend_product__r.Name &amp; &quot; on marketplace &quot; &amp;  Marketplace__r.Name  &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>