force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Name_Indexed__c.field-meta.xml
<CustomField>
    <fullName>Name_Indexed__c</fullName>
    <description>trigger populates from the formula field so that we can index and therefore search on this field.</description>
    <externalId>true</externalId>
    <label>Name Indexed</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>