force-app/main/default/objects/Supplier_Buyer_Map__c/fields/New_Buyer__c.field-meta.xml
<CustomField>
    <fullName>New_Buyer__c</fullName>
    <formula>IF ( Buyer__r.Number_of_Invoices__c =0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Buyer</label>
    <type>Checkbox</type>
</CustomField>