force-app/main/default/objects/Supplier_Buyer_Map__c/fields/No_LOA__c.field-meta.xml
<CustomField>
    <fullName>No_LOA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No LOA</label>
    <type>Checkbox</type>
</CustomField>