force-app/main/default/objects/Supplier_Buyer_Map__c/fields/No_of_closed_invoices_overdue_60_d__c.field-meta.xml
<CustomField>
    <fullName>No_of_closed_invoices_overdue_60_d__c</fullName>
    <label>No of closed invoices overdue &gt;= 60 d</label>
    <summaryFilterItems>
        <field>invoice_finance_deal__c.over_due_days_value__c</field>
        <operation>greaterThan</operation>
        <value>59</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>invoice_finance_deal__c.Phase__c</field>
        <operation>equals</operation>
        <value>4:CLOSED</value>
    </summaryFilterItems>
    <summaryForeignKey>invoice_finance_deal__c.Supplier_Buyer_Map__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>