force-app/main/default/objects/Supplier_Buyer_Map__c/fields/No_reminder_before_due_date__c.field-meta.xml
<CustomField>
    <fullName>No_reminder_before_due_date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>No email reminder before due date if this checkbox is checked.</inlineHelpText>
    <label>No reminder before due date</label>
    <type>Checkbox</type>
</CustomField>