force-app/main/default/objects/Supplier_Buyer_Map__c/fields/notice_of_assignment_instructions__c.field-meta.xml
<CustomField>
    <fullName>notice_of_assignment_instructions__c</fullName>
    <label>notice of assignment instructions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>send with every invoice</fullName>
                <default>true</default>
                <label>send with every invoice</label>
            </value>
            <value>
                <fullName>send with the first invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>