force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Number_of_invoice_last_12_month_auto__c.field-meta.xml
<CustomField>
    <fullName>Number_of_invoice_last_12_month_auto__c</fullName>
    <label>Number of invoice last 12 month auto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>