force-app/main/default/objects/Supplier_Buyer_Map__c/fields/number_of_invoices_all_time__c.field-meta.xml
<CustomField>
    <fullName>number_of_invoices_all_time__c</fullName>
    <description>posted on platform
but its filtering on discount rate. should base on product &apos;listable product&apos; but cant filter on calculated fields... make into a trigger ?? hmmmm</description>
    <label>number of invoices all time</label>
    <summaryFilterItems>
        <field>invoice_finance_deal__c.Phase__c</field>
        <operation>equals</operation>
        <value>2:ON MARKETPLACE, 3:IN PROGRESS, 4:CLOSED</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>invoice_finance_deal__c.discount_rate__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>invoice_finance_deal__c.Supplier_Buyer_Map__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>