force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Number_of_invoices_paid_back_all_time__c.field-meta.xml
<CustomField>
    <fullName>Number_of_invoices_paid_back_all_time__c</fullName>
    <label>Number of invoices paid back all time</label>
    <summaryFilterItems>
        <field>invoice_finance_deal__c.Phase__c</field>
        <operation>equals</operation>
        <value>4:CLOSED</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>invoice_finance_deal__c.over_due_days_value__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>invoice_finance_deal__c.Supplier_Buyer_Map__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>