force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Number_of_Pending_Instalement__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pending_Instalement__c</fullName>
    <description>Sum of all instalment for this map status pending</description>
    <inlineHelpText>Sum of all instalment for this map status pending</inlineHelpText>
    <label>Number of Pending Instalments</label>
    <summaryFilterItems>
        <field>Instalment_insurance_fee__c.Status_Instalment__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Instalment_insurance_fee__c.Supplier_buyer_map_instalment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>