force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Supplier Buyer Maps</relationshipLabel>
    <relationshipName>Supplier_Buyer_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>