force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Onboarding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Notes__c</fullName>
    <label>Onboarding Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>