force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Operational_Risk_Assessment_Session__c.field-meta.xml
<CustomField>
    <fullName>Operational_Risk_Assessment_Session__c</fullName>
    <formula>if(isnull( Supplier__r.Operational_Risk_Assessment_Session_Date__c ),FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operational Risk Assessment Session</label>
    <type>Checkbox</type>
</CustomField>