force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Ops_Owner__c.field-meta.xml
<CustomField>
    <fullName>Ops_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ops Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supplier_Buyer_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>