force-app/main/default/objects/Supplier_Buyer_Map__c/fields/over_due_15_29_invoice_count__c.field-meta.xml
<CustomField>
    <fullName>over_due_15_29_invoice_count__c</fullName>
    <label>over due 15-29 invoice count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>