force-app/main/default/objects/Supplier_Buyer_Map__c/fields/over_due_8_14_invoice_count__c.field-meta.xml
<CustomField>
    <fullName>over_due_8_14_invoice_count__c</fullName>
    <description>Overdue 8-14</description>
    <label>over due 8-14 invoice count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>