force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Overdue_Additional_Discount_rate__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Additional_Discount_rate__c</fullName>
    <defaultValue>0.05</defaultValue>
    <description>Additional Discount rate supplier in case of overdue</description>
    <inlineHelpText>Additional Discount rate supplier in case of overdue</inlineHelpText>
    <label>Overdue Additional Discount rate / Month</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>