force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Overdue_days__c.field-meta.xml
<CustomField>
    <fullName>Overdue_days__c</fullName>
    <description>number of days before we should be concerned</description>
    <label>Buffer days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>