force-app/main/default/objects/Supplier_Buyer_Map__c/fields/overdue_invoice_amount_usd_equiv__c.field-meta.xml
<CustomField>
    <fullName>overdue_invoice_amount_usd_equiv__c</fullName>
    <label>overdue invoice amount usd equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>