force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Overdue_Notification_Buyer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Notification_Buyer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overdue Notification Buyer Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Buyer__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supplier Buyer Maps (Overdue Notification Buyer Contact)</relationshipLabel>
    <relationshipName>Supplier_Buyer_Maps1</relationshipName>
    <type>Lookup</type>
</CustomField>