force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Overdue_Supplier_discount_rate__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Supplier_discount_rate__c</fullName>
    <description>Supplier discount rate in case of overdue</description>
    <formula>Supplier_Discount_Rate__c+ Overdue_Additional_Discount_rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Supplier discount rate in case of overdue</inlineHelpText>
    <label>Overdue Supplier discount rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>