force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Passthrough_Map__c.field-meta.xml
<CustomField>
    <fullName>Passthrough_Map__c</fullName>
    <formula>IF (CONTAINS( Market_Place_Name__c , &quot;Passthrough&quot;),TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passthrough Map</label>
    <type>Checkbox</type>
</CustomField>