force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Payment_delay_risk__c.field-meta.xml
<CustomField>
    <fullName>Payment_delay_risk__c</fullName>
    <label>Payment delay risk</label>
    <type>TextArea</type>
</CustomField>