force-app/main/default/objects/Supplier_Buyer_Map__c/fields/pct_Com_Head_Sales__c.field-meta.xml
<CustomField>
    <fullName>pct_Com_Head_Sales__c</fullName>
    <label>% Com Head Sales</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>