force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Pct_Com_Owner__c.field-meta.xml
<CustomField>
    <fullName>Pct_Com_Owner__c</fullName>
    <label>% Com Owner</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>