force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Pct_Owner_1__c.field-meta.xml
<CustomField>
    <fullName>Pct_Owner_1__c</fullName>
    <label>% Owner 1</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>