force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Pct_Owner_2__c.field-meta.xml
<CustomField>
    <fullName>Pct_Owner_2__c</fullName>
    <formula>1 -  Pct_Owner_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Owner 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>