force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Percentage_of_financin_Manualg__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_financin_Manualg__c</fullName>
    <inlineHelpText>Field reserved for Bangladesh 95% use case. Do not change otherwise.</inlineHelpText>
    <label>Percentage of financing</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>