force-app/main/default/objects/Supplier_Buyer_Map__c/fields/percentage_of_financing__c.field-meta.xml
<CustomField>
    <fullName>percentage_of_financing__c</fullName>
    <formula>If( Not(IsBlank(Percentage_of_financin_Manualg__c)), Percentage_of_financin_Manualg__c
, If( Buyer_Insured_By__c = &apos;Volofin&apos;, 0.85
, If( AND( Buyer_Insured_By__c = &apos;ICIEC&apos;, Not( Buyer__c = &apos;0010I00002ByYt8&apos;)), 0.80
, If( Principal_amount_for_SDR__c, 1.00
, If( IsPickVal(Supplier__r.Country_of_Incorporation__c, &apos;Bangladesh&apos;), 0.95
, If( Begins(Incomlend_product__r.Name, &apos;In Transit&apos;), 0.8
, 0.90))))))</formula>
    <label>percentage of financing (auto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>