force-app/main/default/objects/Supplier_Buyer_Map__c/fields/PreListing_Advance_Invoice_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>PreListing_Advance_Invoice_Amount_USD__c</fullName>
    <description>Sum Of invoice amount  Prelisting from invoice</description>
    <inlineHelpText>Sum Of invoice amount  Prelisting from invoice</inlineHelpText>
    <label>PreListing Invoice Amount</label>
    <summarizedField>invoice_finance_deal__c.invoice_amount__c</summarizedField>
    <summaryFilterItems>
        <field>invoice_finance_deal__c.Phase__c</field>
        <operation>equals</operation>
        <value>1:PRE LISTING</value>
    </summaryFilterItems>
    <summaryForeignKey>invoice_finance_deal__c.Supplier_Buyer_Map__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>