force-app/main/default/objects/Supplier_Buyer_Map__c/fields/prelisting_reqstd_amt_appro_buyer_usd_eq__c.field-meta.xml
<CustomField>
    <fullName>prelisting_reqstd_amt_appro_buyer_usd_eq__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>prelisting reqstd amt appro buyer usd eq</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>