force-app/main/default/objects/Supplier_Buyer_Map__c/fields/prelisting_requested_amount_usd_equiv__c.field-meta.xml
<CustomField>
    <fullName>prelisting_requested_amount_usd_equiv__c</fullName>
    <label>prelisting requested amount usd equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>