force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <defaultValue>0.0073</defaultValue>
    <inlineHelpText>Premium % to pay for Instalment</inlineHelpText>
    <label>Premium %</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>