force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Previous_CL_Incomlend__c.field-meta.xml
<CustomField>
    <fullName>Previous_CL_Incomlend__c</fullName>
    <inlineHelpText>when the field CL Incomlend is changed , the field will indicate the previous Value</inlineHelpText>
    <label>(Auto) Previous CL Incomlend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>