force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Principal_amount_for_SDR__c.field-meta.xml
<CustomField>
    <fullName>Principal_amount_for_SDR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Principal amount for SDR</label>
    <type>Checkbox</type>
</CustomField>