force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>IF( OR(Buyer_led_Approach__c =TRUE, Contains(Incomlend_product__r.Name,&quot;Reverse&quot;)=true), &quot;Buyer Led&quot;, &quot;Supplier Led&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>